
syntax = "proto3";
package main;

option java_package = "care.solve.protocol.schedule.entity";
option java_outer_classname = "ScheduleProtos";

option go_package = "protocol";

enum DoctorFunctions {
    DOCTOR_CREATE = 0;
    DOCTOR_GET_BY_ID = 1;
    DOCTOR_GET_ALL = 2;
}

enum PatientFunctions {
    PATIENT_CREATE = 0;
    PATIENT_GET_BY_ID = 1;
}

enum ScheduleFunctions {
    SCHEDULE_CREATE = 0;
    SCHEDULE_GET_BY_OWNER_ID = 1;
}

enum SlotFunctions {
    SLOT_CREATE = 0;
    SLOT_UPDATE = 1;
}

message Patient {
    string PatientId = 1;
}

message Doctor {
    string DoctorId = 1;
    string FirstName = 2;
    string LastName = 3;
}

message DoctorCollection {
    repeated Doctor doctors = 1;
}

message Schedule {
    string ScheduleId = 1;
    string OwnerId = 2;
    repeated Slot slots = 3;
}

message Slot {
    string SlotId = 1;
    uint64 TimeStart = 2;
    uint64 TimeFinish = 3;
    Type avaliable = 4;
    RegistrationInfo registrationInfo = 5;

    enum Type {
        FREE = 0;
        BUSY = 1;
    }
}

message RegistrationInfo {
    string Description = 1;
    string AttendeeId = 2;
}
